applications/openeuler-france-repo-mirror/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/limit-connections: "5"
    nginx.ingress.kubernetes.io/limit-rate: 5m
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/server-snippet: |
      rewrite ^/(openEuler-20.09|openEuler-21.03|openEuler-21.09|openeuler1.0)/(.*) https://archives.openeuler.openatom.cn$request_uri permanent;
  name: repo-france-ingress
  namespace: repo-mirror
spec:
  tls:
  - hosts:
    - fr-repo.openeuler.org
    secretName: repo-tls
  rules:
  - host: fr-repo.openeuler.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: repo-service
            port:
              number: 80
  ingressClassName: nginx
